2002-09-25 03:00 Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac:
  - Removed several unwanted gcc options, making compile output readable again
  - Bumped revision to 1.1.1
 include/pqxx/connection.h:
  - Made m_Conn, m_NoticeProcessor mutable
  - Made Connect(), Disconnect(), SetupState() const
  - Un-inlined BackendPID()
  - Added Activate(), Deactivate()
 include/pqxx/nontransaction.h:
  - comment added
 src/connection.cxx:
  - Connect() now assumes connection is not already active
  - Fixed bug: Connect() didn't tell libpq about pending notice processor
 src/robusttransaction.cxx:
  - Created local alias for InvalidOid to reduce compiler warnings
 test/test22.cxx:
  - a little less output
2002-09-23 01:00 Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection.h, src/connection.cxx:
  - Now caches NoticePreprocessor & trace file set by user
  - Implemented lazy connections (requested by Greg Copeland)
 include/pqxx/result.h:
  - Added InsertedOid()
 include/pqxx/trigger.h:
  - Added admonishing comment about backend process ID
 src/robusttransaction.cxx:
  - Use log record's oid instead of explicit id field
  - Only attempt to create log table if creation of log field fails
  - Thanks to Greg Copeland for ideas, criticism & validation
 test/test17.cxx:
  - Fixed comment (used to call itself test15)
 test/test21.cxx, test/test22.cxx, test/test23.cxx, test/test24.cxx,
 test/test25.cxx, test/test26.cxx, test/test27.cxx, test/test28.cxx,
 test/test29.cxx, test/test30.cxx, test/test31.cxx, test/test32.cxx,
 test/test33.cxx, test/test34.cxx, test/test35.cxx, test/test36.cxx,
 test/test37.cxx, test/test38.cxx, test/test39.cxx
  - New
2002-09-20 15:15 Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection.h:
  - Added admonishing comment for BackendPID()
 src/connection.cxx:
  - Noted some exceptions that may change to broken_connection
2002-08-13 15:00 J.H.M. Dassen (Ray) <jdassen@debian.org>
 autogen.sh:
  - Use automake 1.6 if available